Autodoc commit for master/335226f6

--- a/api-index.html
+++ b/api-index.html
@@ -245,6 +245,8 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/retractions">retractions</a><span id="line-content">                  function      clojure.core.logic Retract a series of facts. Takes a vector of vecto...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run">run</a><span id="line-content">                          macro         clojure.core.logic Executes goals until a maximum of n results are fo...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run*">run*</a><span id="line-content">                         macro         clojure.core.logic Executes goals until results are exhausted..
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run-db">run-db</a><span id="line-content">                       macro         clojure.core.logic Executes goals until a maximum of n results are fo...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run-db*">run-db*</a><span id="line-content">                      macro         clojure.core.logic Executes goals until results are exhausted. Uses a...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run-nc">run-nc</a><span id="line-content">                       macro         clojure.core.logic Executes goals until a maximum of n results are fo...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run-nc*">run-nc*</a><span id="line-content">                      macro         clojure.core.logic Executes goals until results are exhausted. Does n...
 </span></span>
