Autodoc commit for master/1cdb5393

--- a/api-index.html
+++ b/api-index.html
@@ -105,8 +105,6 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/defna">defna</a><span id="line-content">                        macro         clojure.core.logic Define a soft cut goal. See conda..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/defne">defne</a><span id="line-content">                        macro         clojure.core.logic Define a goal fn. Supports pattern matching. All p...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/defnu">defnu</a><span id="line-content">                        macro         clojure.core.logic Define a committed choice goal. See condu..
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/defrel">defrel</a><span id="line-content">                       macro         clojure.core.logic Define a relation for adding facts. Takes a name a...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/difference-with">difference-with</a><span id="line-content">              function      clojure.core.logic Returns a map that consists of the first map with ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/distinct">distinct</a><span id="line-content">                     function      clojure.core.logic.fd A finite domain constraint that will guarantee ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/distinctc">distinctc</a><span id="line-content">                    function      clojure.core.logic.fd The real distinct constraint. v* can be seq of ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/distincto">distincto</a><span id="line-content">                    var           clojure.core.logic A relation which guarantees no element of l will u...
@@ -125,8 +123,6 @@ Shortcuts:<br />
   <h2 id="F"><span id="section-head">F</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.core.logic.fd/-&gt;FiniteDomain">-&gt;FiniteDomain</a><span id="line-content">               function      clojure.core.logic.fd Positional factory function for class clojure.c...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/fact">fact</a><span id="line-content">                         function      clojure.core.logic Add a fact to a relation defined with defrel..
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/facts">facts</a><span id="line-content">                        function      clojure.core.logic Define a series of facts. Takes a vector of vector...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/fail">fail</a><span id="line-content">                         function      clojure.core.logic A goal that always fails..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/featurec">featurec</a><span id="line-content">                     function      clojure.core.logic Ensure that a map contains at least the key-value ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/FiniteDomain">FiniteDomain</a><span id="line-content">                 type          clojure.core.logic.fd 
@@ -237,12 +233,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="R"><span id="section-head">R</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.core.logic/-&gt;Rel">-&gt;Rel</a><span id="line-content">                        function      clojure.core.logic Positional factory function for class clojure.core...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/Rel">Rel</a><span id="line-content">                          type          clojure.core.logic 
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/rembero">rembero</a><span id="line-content">                      var           clojure.core.logic A relation between l and o where is removed from l...
+<span id="section-content"> <a href="index.html#clojure.core.logic/rembero">rembero</a><span id="line-content">                      var           clojure.core.logic A relation between l and o where is removed from l...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/resto">resto</a><span id="line-content">                        function      clojure.core.logic A relation where l is a collection, such that d is...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/retraction">retraction</a><span id="line-content">                   function      clojure.core.logic Remove a fact from a relation defined with defrel..
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/retractions">retractions</a><span id="line-content">                  function      clojure.core.logic Retract a series of facts. Takes a vector of vecto...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run">run</a><span id="line-content">                          macro         clojure.core.logic Executes goals until a maximum of n results are fo...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run*">run*</a><span id="line-content">                         macro         clojure.core.logic Executes goals until results are exhausted..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run-db">run-db</a><span id="line-content">                       macro         clojure.core.logic Executes goals until a maximum of n results are fo...
