Autodoc commit for master/5bf5147a

--- a/api-index.html
+++ b/api-index.html
@@ -175,6 +175,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/lcons">lcons</a><span id="line-content">                        function      clojure.core.logic Constructs a sequence a with an improper tail d if...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/LCons">LCons</a><span id="line-content">                        type          clojure.core.logic 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/llist">llist</a><span id="line-content">                        macro         clojure.core.logic Constructs a sequence from 2 or more arguments, wi...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/log">log</a><span id="line-content">                          macro         clojure.core.logic Goal for println.
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/LVar">LVar</a><span id="line-content">                         type          clojure.core.logic 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/lvaro">lvaro</a><span id="line-content">                        macro         clojure.core.logic A goal that succeeds if the argument is fresh. v m...
 </span></span>
@@ -263,6 +264,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/tabled">tabled</a><span id="line-content">                       macro         clojure.core.logic Macro for defining a tabled goal. Prefer ^:tabled ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.nominal/Tie">Tie</a><span id="line-content">                          record        clojure.core.logic.nominal 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/trace-lvars">trace-lvars</a><span id="line-content">                  macro         clojure.core.logic Goal for tracing the values of logic variables..
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/trace-s">trace-s</a><span id="line-content">                      macro         clojure.core.logic Goal that prints the current substitution.
 </span></span>
   </pre>
 </div><div id="index-body">
@@ -307,11 +309,16 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/!=">!=</a><span id="line-content">                           function      clojure.core.logic.fd A finite domain constraint. u and v must not be...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/*">*</a><span id="line-content">                            function      clojure.core.logic.fd A finite domain constraint for multiplication a...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/+">+</a><span id="line-content">                            function      clojure.core.logic.fd A finite domain constraint for addition and sub...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.arithmetic/&lt;">&lt;</a><span id="line-content">                            macro         clojure.core.logic.arithmetic Goal for testing whether x is less than...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/&lt;">&lt;</a><span id="line-content">                            function      clojure.core.logic.fd A finite domain constraint. u must be less than...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.arithmetic/&lt;=">&lt;=</a><span id="line-content">                           macro         clojure.core.logic.arithmetic Goal for testing whether x is less than...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/&lt;=">&lt;=</a><span id="line-content">                           function      clojure.core.logic.fd A finite domain constraint. u must be less than...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.arithmetic/=">=</a><span id="line-content">                            macro         clojure.core.logic.arithmetic Goal for testing whether x and y are eq...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/==">==</a><span id="line-content">                           function      clojure.core.logic A goal that attempts to unify terms u and v..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/==">==</a><span id="line-content">                           function      clojure.core.logic.fd A finite domain constraint. u and v must be equ...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.arithmetic/&gt;">&gt;</a><span id="line-content">                            macro         clojure.core.logic.arithmetic Goal for testing whether x is greater t...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/&gt;">&gt;</a><span id="line-content">                            function      clojure.core.logic.fd A finite domain constraint. u must be greater t...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.arithmetic/&gt;=">&gt;=</a><span id="line-content">                           macro         clojure.core.logic.arithmetic Goal for testing whether x is greater t...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/&gt;=">&gt;=</a><span id="line-content">                           function      clojure.core.logic.fd A finite domain constraint. u must be greater t...
 </span></span>
   </pre>
