Autodoc commit for master/7c28c2dc

--- a/api-index.html
+++ b/api-index.html
@@ -235,7 +235,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="R"><span id="section-head">R</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.core.logic/rembero">rembero</a><span id="line-content">                      var           clojure.core.logic A relation between l and o where is removed from l...
+<span id="section-content"> <a href="index.html#clojure.core.logic/rembero">rembero</a><span id="line-content">                      var           clojure.core.logic A relation between l and o where x is removed from...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/resto">resto</a><span id="line-content">                        function      clojure.core.logic A relation where l is a collection, such that d is...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run">run</a><span id="line-content">                          macro         clojure.core.logic Executes goals until a maximum of n results are fo...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run*">run*</a><span id="line-content">                         macro         clojure.core.logic Executes goals until results are exhausted..
