Autodoc commit for master/fa9451ed

--- a/api-index.html
+++ b/api-index.html
@@ -72,15 +72,15 @@ Shortcuts:<br />
   <pre>
 <span id="section-content"> <a href="index.html#clojure.core.logic/-&gt;AnswerCache">-&gt;AnswerCache</a><span id="line-content">                function      clojure.core.logic Positional factory function for class clojure.core...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/all">all</a><span id="line-content">                          macro         clojure.core.logic Like fresh but does does not create logic variable...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.bench/all-connected-to-allo">all-connected-to-allo</a><span id="line-content">        var           clojure.core.logic.bench Collect all cliques in l. l must be bounded ...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.bench/all-connected-to-allo">all-connected-to-allo</a><span id="line-content">        function      clojure.core.logic.bench Collect all cliques in l. l must be bounded ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/AnswerCache">AnswerCache</a><span id="line-content">                  type          clojure.core.logic 
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/appendo">appendo</a><span id="line-content">                      var           clojure.core.logic A relation where x, y, and z are proper collection...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/appendo">appendo</a><span id="line-content">                      function      clojure.core.logic A relation where x, y, and z are proper collection...
 </span></span>
   </pre>
 </div><div id="index-body">
   <h2 id="B"><span id="section-head">B</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.core.logic.fd/bounded-listo">bounded-listo</a><span id="line-content">                var           clojure.core.logic.fd Ensure that the list l never grows beyond bound...
+<span id="section-content"> <a href="index.html#clojure.core.logic.fd/bounded-listo">bounded-listo</a><span id="line-content">                function      clojure.core.logic.fd Ensure that the list l never grows beyond bound...
 </span></span>
   </pre>
 </div><div id="index-body">
@@ -93,7 +93,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/conde">conde</a><span id="line-content">                        macro         clojure.core.logic Logical disjunction of the clauses. The first goal...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/condu">condu</a><span id="line-content">                        macro         clojure.core.logic Committed choice. Once the head (first goal) of a ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/conjo">conjo</a><span id="line-content">                        function      clojure.core.logic A constraint version of conj.
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.bench/connected-to-allo">connected-to-allo</a><span id="line-content">            var           clojure.core.logic.bench Ensure that vertex v is connected to all ver...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic.bench/connected-to-allo">connected-to-allo</a><span id="line-content">            function      clojure.core.logic.bench Ensure that vertex v is connected to all ver...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/conso">conso</a><span id="line-content">                        function      clojure.core.logic A relation where l is a collection, such that a is...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/ConstraintStore">ConstraintStore</a><span id="line-content">              type          clojure.core.logic 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/copy-term">copy-term</a><span id="line-content">                    function      clojure.core.logic Copies a term u into v. Non-relational..
@@ -108,7 +108,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/defnu">defnu</a><span id="line-content">                        macro         clojure.core.logic Define a committed choice goal. See condu..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/distinct">distinct</a><span id="line-content">                     function      clojure.core.logic.fd A finite domain constraint that will guarantee ...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/distinctc">distinctc</a><span id="line-content">                    function      clojure.core.logic.fd The real distinct constraint. v* can be seq of ...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/distincto">distincto</a><span id="line-content">                    var           clojure.core.logic A relation which guarantees no element of l will u...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/distincto">distincto</a><span id="line-content">                    function      clojure.core.logic A relation which guarantees no element of l will u...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/dom">dom</a><span id="line-content">                          function      clojure.core.logic.fd Assign a var x a domain..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/domain">domain</a><span id="line-content">                       function      clojure.core.logic.fd Construct a domain for assignment to a var. Arg...
 </span></span>
@@ -192,8 +192,8 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/matcha">matcha</a><span id="line-content">                       macro         clojure.core.logic Define a soft cut pattern match. See conda..
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/matche">matche</a><span id="line-content">                       macro         clojure.core.logic Pattern matching macro. All patterns will be tried...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/matchu">matchu</a><span id="line-content">                       macro         clojure.core.logic Define a committed choice goal. See condu..
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/member1o">member1o</a><span id="line-content">                     var           clojure.core.logic Like membero but uses to disequality further const...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/membero">membero</a><span id="line-content">                      var           clojure.core.logic A relation where l is a collection, such that l co...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/member1o">member1o</a><span id="line-content">                     function      clojure.core.logic Like membero but uses to disequality further const...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/membero">membero</a><span id="line-content">                      function      clojure.core.logic A relation where l is a collection, such that l co...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.fd/MultiIntervalFD">MultiIntervalFD</a><span id="line-content">              type          clojure.core.logic.fd 
 </span></span>
   </pre>
@@ -219,7 +219,7 @@ Shortcuts:<br />
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/-&gt;PMap">-&gt;PMap</a><span id="line-content">                       function      clojure.core.logic Positional factory function for class clojure.core...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/Pair">Pair</a><span id="line-content">                         type          clojure.core.logic 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/partial-map">partial-map</a><span id="line-content">                  function      clojure.core.logic Given map m, returns partial map that unifies with...
-</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/permuteo">permuteo</a><span id="line-content">                     var           clojure.core.logic A relation that will permute xl into the yl. May n...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/permuteo">permuteo</a><span id="line-content">                     function      clojure.core.logic A relation that will permute xl into the yl. May n...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/PMap">PMap</a><span id="line-content">                         record        clojure.core.logic 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/pred">pred</a><span id="line-content">                         macro         clojure.core.logic Check a predicate against the value logic var. Non...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.unifier/prep">prep</a><span id="line-content">                         function      clojure.core.logic.unifier Prep a quoted expression. All symbols prec...
@@ -235,7 +235,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="R"><span id="section-head">R</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.core.logic/rembero">rembero</a><span id="line-content">                      var           clojure.core.logic A relation between l and o where x is removed from...
+<span id="section-content"> <a href="index.html#clojure.core.logic/rembero">rembero</a><span id="line-content">                      function      clojure.core.logic A relation between l and o where x is removed from...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/resto">resto</a><span id="line-content">                        function      clojure.core.logic A relation where l is a collection, such that d is...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run">run</a><span id="line-content">                          macro         clojure.core.logic Executes goals until a maximum of n results are fo...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/run*">run*</a><span id="line-content">                         macro         clojure.core.logic Executes goals until results are exhausted..
