Autodoc commit for master/f3f2b4c6

--- a/api-index.html
+++ b/api-index.html
@@ -73,6 +73,7 @@ Shortcuts:<br />
 <span id="section-content"> <a href="index.html#clojure.core.logic/-&gt;AnswerCache">-&gt;AnswerCache</a><span id="line-content">                function      clojure.core.logic Positional factory function for class clojure.core...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/all">all</a><span id="line-content">                          macro         clojure.core.logic Like fresh but does does not create logic variable...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic.bench/all-connected-to-allo">all-connected-to-allo</a><span id="line-content">        function      clojure.core.logic.bench Collect all cliques in l. l must be bounded ...
+</span></span><span id="section-content"> <a href="index.html#clojure.core.logic/and*">and*</a><span id="line-content">                         function      clojure.core.logic A function version of all, which takes a list of g...
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/AnswerCache">AnswerCache</a><span id="line-content">                  type          clojure.core.logic 
 </span></span><span id="section-content"> <a href="index.html#clojure.core.logic/appendo">appendo</a><span id="line-content">                      function      clojure.core.logic A relation where x, y, and z are proper collection...
 </span></span>
@@ -210,7 +211,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="O"><span id="section-head">O</span></h2>
   <pre>
-
+<span id="section-content"> <a href="index.html#clojure.core.logic/or*">or*</a><span id="line-content">                          function      clojure.core.logic A function version of conde, which takes a list of...
+</span></span>
   </pre>
 </div><div id="index-body">
   <h2 id="P"><span id="section-head">P</span></h2>
